# student_performance_predictor

./: .gitignore  .main.py.swp  README.md  db_setup.py  main.py  model.py  pyproject.toml  student_performance.db  ui_main.py
data/: database.db
database/: db_operations.py  models.py
trainbook/: Untitled.ipynb
ui/: login_window.py  main_window.py
utils/: data_processor.py  ml_models.py
