[project]
name = "student-predictor"
version = "0.1.0"
description = "Student performance Prediction using ML classification algorithm like Naive Bias and Descision Tree"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
]
